fixed organization alignment on home page

--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -127,3 +127,7 @@ div.container {
   padding-left: 0;
   padding-right: 0;
 }
+
+#organization-display {
+  display: inline-block;
+}
